<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_totally">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/text_thank_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_error_screen_text"
            android:textSize="@dimen/title_second_component_text_size"
            android:textColor="@color/whiteTotally"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/common_margin_top"
            android:layout_marginEnd="@dimen/common_margin_top"/>

        <TextView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top_small"
            android:text="@string/activity_error_screen_back_text"
            android:textSize="@dimen/title_third_component_text_size"
            android:textColor="@color/colorDisabled"
            android:textStyle="italic"/>

        <LinearLayout
            android:id="@+id/back_to_player_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bg_main_function"
            android:paddingStart="@dimen/common_margin_top_big"
            android:paddingEnd="@dimen/common_margin_top_big"
            android:paddingTop="@dimen/common_margin_top_small"
            android:paddingBottom="@dimen/common_margin_top_small"
            android:layout_marginTop="@dimen/common_margin_top_big"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_third_component_text_size"
                android:text="@string/back_button"
                android:textColor="@color/whiteTotally"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>